@@ -46,6 +46,9 @@ Bugfixes
    * Fix broken PostgreSQL detection for custom location, 
      http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2008x02x25x025134 ( Angel Carpintero )
    * Fixed stepper when is used track_auto on ( Angel Carpintero ).
+   * Better debug in netcam for "Error reading image header" 
+     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2008x02x27x092849 (Simon Walls)
+
 
 3.2.9 Formal Release - Summary of Changes
 
